Made change on 9/15/2015

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>LT's Webpage</title>
+		<title>LT's New Website</title>
 	</head>
 	<body>
-		<h1>Lam Tran</h1>
+		<h1>Welcome to My New Website</h1>
 		<img src="http://images.nationalgeographic.com/wpf/media-live/photos/000/088/cache/beach-seychelles_8881_600x450.jpg" />
 		<p>I love to eat!</p>
 		<p>and sleep!!</p>
@@ -15,63 +15,63 @@
 
 		<img src="http://s3.amazonaws.com/codecademy-blog/assets/ninja_zpsa5dbe37a.jpg" />
 	
-		<p>I'm male, a software Developer, and a resident of Fairfax County, Virginia.</p>
 		<ul>	
-			<li><p style="color:red">Interests</p>
+			<li><p style="color:red">I want to learn:</p>
 				<ul>
 					<li style="font-family:Futura">HTML</li>
-					<li style="font-family:Futura">Coding</li>
-					<li style="font-family:Futura">Build Website</li>				
+					<li style="font-family:Futura">Javascript</li>
+					<li style="font-family:Futura">CSS</li>				
 				</ul>
 			 </li>
-			<li><p style="color:red">Jobs</p>
+			<li><p style="color:red">Interests in:</p>
 				<ol>
-					<li style="font-family:Futura">Enterprise developer</li>
-					<li style="font-family:Futura">Web developer</li>	
-					<li style="font-size:18px; font-family:Futura"> Programming</li>			
+					<li style="font-family:Futura">Programming</li>
+					<li style="font-family:Futura">Web Development</li>	
+					<li style="font-size:18px; font-family:Futura">Design and Build Website</li>			
 				</ol>
 			 </li>
-			<li><p style="color:red">Where I Went to School</p>
-				<ol>
-					<li style="font-family:Futura"><strong>George Mason</strong> High School</li>
-										<li style="font-family:Futura"><em>University of Maryland</em></li>		
-				</ol>
-			</li>
 			<li><p style="color:red">Favorite Quotes</p>
 				<ul>
 					<li style="font-family:Futura">"If at first you don't succeed, try, try, and try again."</li
-										<li style="font-family:Futura">"An apple in the hand is worth two on the tree."</li>			
+					<li style="font-family:Futura">"An apple in the hand is worth two on the tree."</li>			
 				</ul>
 			</li>
 		</ul>
 		<ol>
-			<li>Dad's interests
+			<li>Favorite Sports
 				<ul>	
-					<li>football</li>
-					<li>knitting</li>
+					<li>Basketball</li>
+					<li>Football</li>
+					<li>Volleyball</li>
 				</ul>
 			</li>
-			<li>Mom's interests
+			<li>Favorite Hobbies
 				<ul>
-					<li>hating football</li>
-					<li>skydiving</li>
+					<li>Camping</li>
+					<li>Reading</li>
+					<li>Eating</li>
 				</ul>
 			</li>
 		</ol>
-		<ul>
-			<li>Favorite Boys' Names</li>
-				<ol>
-					<li>Eric</li>
-					<li>John</li>
-					<li>Andy</li>
-				</ol>
-			<li>Favorite Girls' Names</li>
-				<ol>
-					<li>Erica</li>
-					<li>Sam</li>
-					<li>Rachel</li>
-				</ol>
-		</ul>
+
+		<!-- What you hope to get out of this class in a paragraph tag -->
+		<h2>What I hope to get out of this class:</h2>
+		<p>Learn to create an awesome website!</p>
+
+		<h2>Self Rating</h2>
+		<table border="1">
+		    <tr>
+		        <td>Beginner</td>
+		        <td>Intermediate</td>
+		        <td>Advanced</td>
+		    </tr>
+		    <tr>
+		        <td style="background-color:red;text-align:center">x</td>
+		        <td></td>
+		        <td></td> 
+		    </tr>
+		</table>
+
 	</body>
 
 </html>
