--- a/index.html
+++ b/index.html
@@ -4,19 +4,16 @@
 		<title>LT's New Website</title>
 	</head>
 	<body>
-		<h1>Welcome to My New Website</h1>
+		<h1>Welcome to Lam Tran's Website</h1>
 		<img src="http://images.nationalgeographic.com/wpf/media-live/photos/000/088/cache/beach-seychelles_8881_600x450.jpg" />
 		<p>I love to eat!</p>
 		<p>and sleep!!</p>
 		<p>and go to the beach ):</p>
 		<a href="http://i.huffpost.com/gadgets/slideshows/5718/slide_5718_77404_large.jpg?1376589511296"><img src="http://i.huffpost.com/gadgets/slideshows/5718/slide_5718_77404_large.jpg?1376589511296" /> </a>
 		<p></p>
-		<a href="http://www.codecademy.com/courses/web-beginner-en-LceTK/0/6?curriculum_id=50579fb998b470000202dc8b#">Please visit My Website!</a>`
 
-		<img src="http://s3.amazonaws.com/codecademy-blog/assets/ninja_zpsa5dbe37a.jpg" />
-	
 		<ul>	
-			<li><p style="color:red">I want to learn:</p>
+			<h1><li><p style="color:red">I want to learn:</p> </h1>
 				<ul>
 					<li style="font-family:Futura">HTML</li>
 					<li style="font-family:Futura">Javascript</li>
