--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
 		<p></p>
 
 		<ul>	
-			<h1><li><p style="color:red">I want to learn:</p> </h1>
+			<li><p style="color:red"><h2>I want to learn: </h2></p>
 				<ul>
 					<li style="font-family:Futura">HTML</li>
 					<li style="font-family:Futura">Javascript</li>
 					<li style="font-family:Futura">CSS</li>				
 				</ul>
 			 </li>
-			<li><p style="color:red">Interests in:</p>
+			<li><p style="color:red"><h2></h1>Interests in:</h2></p>
 				<ol>
 					<li style="font-family:Futura">Programming</li>
 					<li style="font-family:Futura">Web Development</li>	
 					<li style="font-size:18px; font-family:Futura">Design and Build Website</li>			
 				</ol>
 			 </li>
-			<li><p style="color:red">Favorite Quotes</p>
+			<li><p style="color:red"><h2>Favorite Quotes</h2></p>
 				<ul>
 					<li style="font-family:Futura">"If at first you don't succeed, try, try, and try again."</li
 					<li style="font-family:Futura">"An apple in the hand is worth two on the tree."</li>			
@@ -42,6 +42,7 @@
 					<li>Volleyball</li>
 				</ul>
 			</li>
+			
 			<li>Favorite Hobbies
 				<ul>
 					<li>Camping</li>
