--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 			<li><p style="color:red"><h2>I want to learn: </h2></p>
 				<ul>
 					<li style="font-family:Futura">HTML</li>
-					<li style="font-family:Futura">Javascript</li>
-					<li style="font-family:Futura">CSS</li>				
+					<li style="font-family:Futura">CSS</li>
+					<li style="font-family:Futura">Javascript</li>				
 				</ul>
 			 </li>
-			<li><p style="color:red"><h2></h1>Interests in:</h2></p>
+			<li><p style="color:red"><h2>I'm interested in:</h2></p>
 				<ol>
 					<li style="font-family:Futura">Programming</li>
 					<li style="font-family:Futura">Web Development</li>	
@@ -42,7 +42,7 @@
 					<li>Volleyball</li>
 				</ul>
 			</li>
-			
+			<p></p>
 			<li>Favorite Hobbies
 				<ul>
 					<li>Camping</li>
