--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			</li>
 		</ul>
 		<ol>
-			<li>Favorite Sports
+			<li><h2>Favorite Sports</h2>
 				<ul>	
 					<li>Basketball</li>
 					<li>Football</li>
@@ -43,7 +43,7 @@
 				</ul>
 			</li>
 			<p></p>
-			<li>Favorite Hobbies
+			<li><h2>Favorite Hobbies</h2>
 				<ul>
 					<li>Camping</li>
 					<li>Reading</li>
